# lecture-higher-order-cont

./: README.md  lecture.cabal  lecture8.cabal
app/: Main.hs  Picross.hs
src/: Lecture.hs  Lecture8.hs
