name:                lecture8
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fpclass/lecture8#readme
license:             MIT
license-file:        LICENSE
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           2020 Michael B. Gale
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lecture8
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010


executable picross
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Picross
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpclass/lecture8
